[project]
name = "griffe-typing-extensions"
authors = [
    {name = "Yael Balbastre", email = "yael.balbastre@gmail.com"},
]
maintainers = [
    {name = "Yael Balbastre", email = "yael.balbastre@gmail.com"},
]
description = "A griffe extension that converts typing_extensions to typing"
readme = "README.md"
license = {text = "MIT"}
keywords = ["griffe", "typing"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = ["griffe"]

[project.urls]
Homepage = "https://github.com/bagofseeds/griffe-typing-extensions"
Documentation = "https://github.com/bagofseeds/griffe-typing-extensions#readme"
Issues = "https://github.com/bagofseeds/griffe-typing-extensions/issues"
Repository = "https://github.com/bagofseeds/griffe-typing-extensions"

[project.optional-dependencies]
test = [
    "pytest>=7",
]

[build-system]
requires = [
    "setuptools>=59.0",
    "wheel>=0.45.1",
    "versioningit>=1.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["griffe_typing_extensions"]

[tool.versioningit]
default-version = "0+unknown"

[tool.versioningit.vcs]
default-tag = "0.1"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.write]
file = "src/bagof/things/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
